--- a/frontend-project/src/App.css
+++ b/frontend-project/src/App.css
@@ -7,5 +7,7 @@
   --darkgreen: rgb(97, 177, 22);
   --lightblue:rgb(32, 102, 167);
   --darkblue:rgb(3, 96, 184);
+  --gray:rgb(221, 208, 208);
+  --links: rgb(114, 107, 107);
 
 }
