--- a/frontend-project/src/components/Navbar.css
+++ b/frontend-project/src/components/Navbar.css
@@ -19,7 +19,7 @@
 }
 .nav-links{
     text-decoration: none;
-    color: rgb(114, 107, 107);
+    color:var(--links);
 }
 .bottom{
     width: 100%;
@@ -101,7 +101,7 @@ color:var(--darkblue);
     }
 }
 
-@media screen and (min-width:320px) {
+@media screen and (max-width:320px) {
     .navbar{
         width: 100%;
     }
