--- a/frontend-project/src/components/header/Header.css
+++ b/frontend-project/src/components/header/Header.css
@@ -1,13 +1,13 @@
 .preheader{
-    width: 50%;
+    width: 37%;
     display: flex;
     margin: auto;
     border: 1px solid black;
     justify-content: space-between;
 }
 .header{
-    width: 50%;
-    height: 500px;
+    width: 37%;
+    height: 350px;
     display: flex;
     justify-content: space-between;
     margin: auto;
@@ -19,21 +19,57 @@
    border: 1px solid black;
   height: 48%;
 }
-.text1{
-    width: 48%;
+.text{
+    width: 46%;
     border: 1px solid black;
-    height: 48%; 
+   height: 46%;
 }
-
-.text2{
-    width: 48%;
-    border: 1px solid black;
-   height: 48%;
+.btn{
+    margin-top: 40px;
+}
+.btn button{
+    background-color: var(--gray);
+    font-size: 12px;
+    width: 100px;
+    height: 40px;
+    border: none;
+    outline: none;
+    height: 17px;
+    border-radius: 6px;
+}
+.btn button:hover{
+    color: #fff;
+    background-color: var(--lightgreen);
 }
 .p{
-    font-size: 22px;
+    font-size: 16px;
 }
 .header button{
     margin-left: 100px;
 }
 
+.header-icons{
+    width: 37%;
+    height: 350px;
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    border: 1px solid black;
+    flex-wrap: wrap;
+}
+.div-icons{
+    width: 45%;
+    height: 40%;
+    background-color: var(--gray);
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.icons-box{
+    font-size: 70px;
+    color: gray;
+}
+.icons-box:hover{
+  color: var(--lightgreen);
+}
