--- a/frontend-project/src/components/Navbar.css
+++ b/frontend-project/src/components/Navbar.css
@@ -101,7 +101,7 @@ color:var(--darkblue);
     }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (min-width:320px) {
     .navbar{
         width: 100%;
     }
