--- a/frontend-project/src/components/footer/Footer.css
+++ b/frontend-project/src/components/footer/Footer.css
@@ -1,10 +1,13 @@
 .footer{
     width: 100%;
-    height: 50px;
+    height: 55px;
     background-color: var(--gray);
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+}
+.footer-ul-icons{
+    display: flex;
 }
 .footer-icons{
     width: 40px;
@@ -14,10 +17,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 10px;
 }
 .ft-icons{
     color: gray;
-    font-size: 20px;
+    font-size: 21px;
+    font-weight: 500;
 }
 .ft-icons:hover{
    color: var(--lightgreen);
@@ -27,9 +32,24 @@
     display: flex;
 }
 .footer-list{
-   padding:0px 20px;
+   padding:0px 18px;
 }
 .footer-links{
     text-decoration: none;
     color: var(--links);
+}
+@media screen and (max-width:768px) {
+    
+}
+
+@media screen and (max-width:480px) {
+    .footer-ul span{
+        display: none;
+   }
+}
+
+@media screen and (min-width:320px) {
+   .footer-ul span{
+        display: none;
+   }
 }
