--- a/frontend-project/src/components/header/Header.css
+++ b/frontend-project/src/components/header/Header.css
@@ -1,12 +1,17 @@
 .preheader{
-    width: 37%;
+    width: 40%;
     display: flex;
     margin: auto;
     border: 1px solid black;
     justify-content: space-between;
 }
+.preheader h1{
+    color:var(--links);
+    font-weight: 200;
+    font-size: 25px;
+}
 .header{
-    width: 37%;
+    width: 40%;
     height: 350px;
     display: flex;
     justify-content: space-between;
@@ -15,17 +20,26 @@
     flex-wrap: wrap;
 }
 .img1{
-   width: 48%;
+   width: 45%;
    border: 1px solid black;
-  height: 48%;
+  height: 40%;
 }
 .text{
-    width: 46%;
+    width: 45%;
     border: 1px solid black;
-   height: 46%;
+   height: 40%;
+}
+.text-box{
+    width: 100%;
+    border: 1px solid black;
+   height: 80%;
 }
 .btn{
-    margin-top: 40px;
+    width: 100%;
+    height: 20%;
+    border: 1px solid black;
+    display: flex;
+    align-items: baseline;
 }
 .btn button{
     background-color: var(--gray);
@@ -41,15 +55,19 @@
     color: #fff;
     background-color: var(--lightgreen);
 }
+.header h2{
+    color:var(--links);
+}
 .p{
     font-size: 16px;
+    color:var(--links);
 }
 .header button{
     margin-left: 100px;
 }
 
 .header-icons{
-    width: 37%;
+    width: 40%;
     height: 350px;
     display: flex;
     justify-content: space-between;
@@ -73,3 +91,61 @@
 .icons-box:hover{
   color: var(--lightgreen);
 }
+
+@media screen and (max-width:768px) {
+     .preheader{
+        width: 50%;
+        background-color: aquamarine;
+     }
+     .header{
+        width: 50%;
+     }
+     .header-icons{
+        width: 50%;
+     }
+     .btn{
+        background-color: aqua;
+     }
+     .btn button{
+       margin-left:50px;
+       margin-top: 5px;
+     }
+}
+
+@media  screen and (min-width:320px) {
+    .header{
+        display: block;
+        height: 100%;     
+    }
+    .img1{
+        display: flex;
+        margin: auto;
+        width: 70%;
+        height: 115px;
+        margin-top: 5px;
+    }
+    .text{
+        width: 70%;
+        margin: auto;
+    }
+    .header h2{
+        font-size: 15px;
+    }
+    .preheader h1{
+        margin: auto;
+    }
+    .p{
+        display: none;
+    }
+    .header-icons{
+        display: block;
+        height: 95%;
+    }
+    .div-icons{
+        margin: auto;
+        width: 65%;
+        height: 115px;
+        margin-top: 5px;
+    }
+}
+
